FIX attempt for jarring scrolling effect on mobile 1

--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -20,7 +20,8 @@ p {
   font-size: 0.9rem;
 }
 .parallax {
-  height: 100vh;
+  position: fixed;
+  height: 99vh;
 }
 .plasma-cutter {
   max-width: none;
